Removing redundant component and adding functionality for toggling elements between lists on-click

--- a/app/components/list-element.hbs
+++ b/app/components/list-element.hbs
@@ -1,3 +1,4 @@
-<div class="list-container">
-  <img src="@imgUrl"/>
+<div class="list-container" {{on "click" @onClick}}>
+  {{!-- <img src={{@imageUrl}} draggable="false"/> --}}
+  <p>{{@id}}</p>
 </div>
