Renaming files for better readability and cleaning up unused code

--- a/app/components/single-element.hbs
+++ b/app/components/single-element.hbs
@@ -1,4 +1,4 @@
-<div class="list-container" {{on "click" @onClick}}>
+<div class="list-item" {{on "click" @onClick}}>
   {{!-- <img src={{@imageUrl}} draggable="false"/> --}}
   <p>{{@id}}</p>
 </div>
