--- a/app/components/container.hbs
+++ b/app/components/container.hbs
@@ -1,10 +1,10 @@
-<div class="resource-container">
-  <ResourcesList
+<div class="container">
+  <ListOfElements
     @elements = {{@elements.available}}
     @onFaceClicked={{@toggleElementsBetweenLists}}
   />
   
-  <ResourcesList
+  <ListOfElements
     @elements={{@elements.allocated}}
     @onFaceClicked={{@toggleElementsBetweenLists}}
   />
