--- a/app/components/list-of-elements.hbs
+++ b/app/components/list-of-elements.hbs
@@ -1,6 +1,6 @@
-<div class="resources-list-container">
+<div class="list-container">
   {{#each @elements as |element|}}
-    <ListElement
+    <SingleElement
       @id={{element}}
       @onClick={{(fn @onFaceClicked element)}}
     />
