--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 {{page-title "Index"}}
 
 
-<ResourcesContainer
+<Container
   @elements={{@model}}
   @toggleElementsBetweenLists={{this.toggleElementsBetweenLists}}
 />
