Adding button to new route

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,4 +7,6 @@
   @toggleElementsBetweenLists={{this.toggleElementsBetweenLists}}
 />
 
+<ButtonRouteTransition @redirectedRoute="settings" @buttonText="Settings"/>
+
 {{outlet}}
