--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -36,3 +36,20 @@
     align-content: flex-start;
     justify-content: center;
 }
+
+.button {
+    border: 3px whitesmoke solid;
+    border-radius: 20px;
+    padding: 10px 17px;
+    color: blue;
+    background-color: powderblue;
+    font-family: 'Gill Sans', 'Gill Sans MT';
+    margin: auto;
+}
+
+.button-wrapper {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
